
Version 6.4.18
  - CID3Tag: Neue Funktion zum Auslesen von PRIV-Frames (PrivateData)
  - Webserver: Funktionen queueResponse und queueBasicAuthFailedResponse haben
    keinen Rückgabewert mehr und werfen eine Exception im Fehlerfall
  - Webserver: Fehlerbehandlung in answer_to_connection implementiert
  - CConfig: Spaces am Anfang und Ende von Werten werden nicht mehr abge-
    schnitten

Version 6.4.17 vom 03.11.2013	(SVN-Tag: REL_6_4_17)
  - Cppl6Core ist nicht mehr von CDebug/CLog abgeleitet
  - CArray::Explode: Performance wurde drastisch verbessert
  - CArray: Neue Funktion "Reserve", zum Vorallokieren von Speicher
  - CArray: Neuer Konstruktor mit Explode-Funktion
  - Bugfix in CAssocArray::CreateFromConfig: Bei Angabe von "dotrim=false"
    wurde am Ende doch getrimmt
  - Testsuite um Tests für CAssocArray-Klasse ergänzt (Backport von PPL7)
  - Bugfix: CleanupThreadData hat zwar das Datenobjekt gelöscht, nicht aber
    den Pointer darauf innerhalb der posix threads
  - PPLExit ruft nun CleanupThreadData auf
  - CleanupThreadData ist nun auch für Windows implementiert
  - Makefile: pplgenresource verwendet nun das lokale config-ppl6-Skript
    und die lokale Bibliothek
  - configure: libshout kann jetzt mit --without-libshout abgeschaltet
    werden
  - ppl6-unixconfig.h enthält nurnoch die Typdefinitionen, aber nicht mehr die
    ganzen HAVE_xzy Direktiven
  - Datentyp "mode_t" wird in ppl.h nicht mehr verwendet
  - CTCPSocket::Bind: Hostname und Port werden nun gespeichert und können mit
    den neuen Funktionen "getHostname" und "getPort" abgefragt werden.
  - Webserver::start: Exception "CouldNotStartDaemon" hat jetzt zusätzliche
    Informationen über den aufgetretenen Fehler
  - Webserver: Neue Funktionen: getHostname, getPort
  - configure: Erkennung für libmicrohttpd verbessert
  - configure: Erkennung für curl-config verbessert
  - ppl6-config: Option "--features" unterstützt nun optionale Angabe der